--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,7 +8,7 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_marginBottom">8dp</item>
-        <item name="android:background">@android:color/holo_blue_bright</item>
+        <item name="android:background">@android:color/holo_green_light</item>
         <item name="android:textAppearance">@android:style/TextAppearance.Large</item>
     </style>
 
